--- a/charlies-blog.html
+++ b/charlies-blog.html
@@ -2,8 +2,8 @@
 
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Charlie's favorite things</title>
+    <link href="css/dogstyles.css" rel="stylesheet" type="text/css">
+    <title>Charlie's Blog</title>
   </head>
   <body>
     
